Fixed dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ header {
   height: fit-content;
   padding: 2rem;
   text-align: left;
-  box-shadow: 0 4px 3px -1px rgb(216, 211, 211);
+  
 }
 
 .card-link, header p {
